# talos-cipher

./: .gitignore  Cargo.toml  README.md
.github/workflows/: docs.yml
benches/: automaton_iter.rs  encryption_decryption.rs
data/: challenge.encrypted
data/tests/: text_01.txt  text_01_k0.enc  text_01_k1.enc  text_01_k2.enc  text_01_kBar.enc  text_01_kFoo.enc
rfc/: RFC-0.typ
scripts/: calc_stddev.py  gpu_implementation.py  histogram_shuffle_seeds.py  requirements.txt
specifications/: draft-specification.typ
specifications/rfcs/: RFC-0.typ  RFC-1.typ
src/: automata.rs  bitwise.rs  encrypt.rs  key.rs  lib.rs  parse.rs
src/bits/: bit.rs  bitwise.rs  mod.rs
src/matrix/: toroidal_binary_matrix.rs  toroidal_bit_matrix.rs  toroidal_bool_matrix.rs
src/parse/: mod.rs  table.rs  typing.rs
tests/: encryption_decryption.rs  tests.rs
tests/bin_tests/: cli_decryption.rs  cli_encryption.rs  file_utils.rs  mod.rs
tests/lib_tests/: encryption_decryption.rs  mod.rs
