[package]
name = "talos"
version = "0.1.0"
edition = "2021"

[lib]
name = "talos"
path = "src/lib.rs"

[[bin]]
name = "crypt"
path = "src/bin/crypt.rs"

[[bin]]
name = "test_count"
path = "src/bin/test_count.rs"

[[bin]]
name = "test_shift"
path = "src/bin/test_shift.rs"

[[bin]]
name = "test_transpose"
path = "src/bin/test_transpose.rs"


[dependencies]
rand ="0.9.0"
clap = { version = "4.0.30", features = ["derive"] }
itertools = "0.14.0"
num-traits = "0.2.19"
