[package]
name = "talos"
version = "0.1.0"
edition = "2021"

[lib]
name = "talos"
path = "src/lib.rs"
bench = false
doctest = false

[[bin]]
name = "encrypt"
path = "src/bin/encrypt.rs"
test = false
bench = false

[[bin]]
name = "decrypt"
path = "src/bin/decrypt.rs"
test = false
bench = false

[[bin]]
name = "test_count"
path = "src/bin/test_count.rs"
test = false
bench = false

[[bin]]
name = "test_shift"
path = "src/bin/test_shift.rs"
test = false
bench = false

[[bin]]
name = "test_transpose"
path = "src/bin/test_transpose.rs"
test = false
bench = false

[dependencies]
rand ="0.9.0"
clap = { version = "4.0.30", features = ["derive"] }
itertools = "0.14.0"
num-traits = "0.2.19"
sha2 = "0.10.9"

[dev-dependencies]
assert_cmd = "2.1.1"
assert_fs = "1.1.3"
criterion = "0.8.0"
predicates = "3.1.3"

[dev-dependencies.cargo-husky]
version = "1.5.0"
default-features = false
features = ["precommit-hook", "run-cargo-test", "run-cargo-clippy", "run-cargo-fmt"]

[[bench]]
name = "automaton_iter"
harness = false
